force-app/main/default/objects/Vehicle__c/fields/Driver_Email__c.field-meta.xml
<CustomField>
    <fullName>Driver_Email__c</fullName>
    <formula>Driver__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Email</label>
    <type>Text</type>
</CustomField>