force-app/main/default/objects/Vehicle__c/fields/Driver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Driver_Phone__c</fullName>
    <description>Driver contact phone</description>
    <formula>Driver__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Phone</label>
    <type>Text</type>
</CustomField>