force-app/main/default/objects/Vehicle__c/fields/Last_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Maintenance</label>
    <referenceTo>Maintance__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>