force-app/main/default/objects/Vehicle__c/fields/Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Last_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Vehicles (Last Service)</relationshipLabel>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>