force-app/main/default/objects/Vehicle__c/fields/Plate_number__c.field-meta.xml
<CustomField>
    <fullName>Plate_number__c</fullName>
    <externalId>true</externalId>
    <label>Plate number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>