force-app/main/default/objects/Vehicle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Available&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>At Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>