force-app/main/default/objects/Vehicle__c/fields/Vehicle_Manager__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>