force-app/main/default/objects/Vehicle__c/fields/Vehicle_Weight__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Weight__c</fullName>
    <label>Vehicle Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>