force-app/main/default/objects/Vehicle__c/recordTypes/Van.recordType-meta.xml
<RecordType>
    <fullName>Van</fullName>
    <active>true</active>
    <label>Van</label>
</RecordType>