force-app/main/default/objects/Vehicle__c/recordTypes/Van1.recordType-meta.xml
<RecordType>
    <fullName>Van1</fullName>
    <active>false</active>
    <label>Van1</label>
</RecordType>