force-app/main/default/objects/Vehicle__c/validationRules/Next_Maintenance_Date_should_be_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Maintenance_Date_should_be_greater</fullName>
    <active>false</active>
    <description>Next Maintenance Date should be greater than last</description>
    <errorConditionFormula>Next_Maintenance_Date__c   &lt;   Last_Maintenance_Date__c</errorConditionFormula>
    <errorDisplayField>Next_Maintenance_Date__c</errorDisplayField>
    <errorMessage>Next Maintenance Date should be greater than last</errorMessage>
</ValidationRule>