force-app/main/default/objects/Vehicle__c/validationRules/Should_contain_TX.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_contain_TX</fullName>
    <active>true</active>
    <description>Plate number should contain or start with  &quot;TX&quot;   (Texas plate)</description>
    <errorConditionFormula>NOT(CONTAINS(LEFT(Plate_number__c , 2 ) , &quot;TX&quot;))</errorConditionFormula>
    <errorDisplayField>Plate_number__c</errorDisplayField>
    <errorMessage>Plate number should contain or start with  &quot;TX&quot;</errorMessage>
</ValidationRule>