force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plate_number__c</columns>
    <columns>Model__c</columns>
    <columns>Vehicle_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>